# QuillFlow

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.github/: ci.yaml
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep  27c1b2a7cb8e_add_is_superadmin_to_users.py  88a2942d5751_initial.py  c5904709c8ce_add_invite_codes_table.py  e4a19f708148_update_invite_codes_table.py  ead86aa2ea2e_add_password_hash_to_users.py
app/: __init__.py  dependencies.py  main.py
app/api/: __init__.py  router.py
app/api/middleware/: auth.py  jwt_auth.py  rate_limit.py  rbac.py
app/api/v1/: __init__.py  admin.py  auth.py  chat.py  documents.py  health.py  ingest.py  users.py
app/db/: __init__.py  engine.py  models.py  repository.py
app/evaluation/: __init__.py  metrics.py  runner.py
app/graph/: __init__.py  builder.py  edges.py  state.py
app/graph/nodes/: __init__.py  cache_check.py  cache_write.py  input_filter.py  planner.py  reducer.py  retriever.py  router.py  (+2 more)
app/models/: __init__.py  domain.py  requests.py  responses.py
app/workers/: __init__.py  settings.py  tasks.py
config/: __init__.py  constants.py  logging.py  settings.py
deploy/argocd/: application.yaml
docker/: .dockerignore  Dockerfile  Dockerfile.worker  docker-compose.yml  entrypoint.py  start.sh
frontend/: Dockerfile  components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: run_evaluation.py  seed_qdrant.py  setup_dev.py
tests/: conftest.py
tests/evaluation/: test_rag_metrics.py
tests/integration/: test_api.py  test_cache_integration.py  test_db.py  test_graph_pipeline.py  test_ingestion.py  test_retrieval.py
tests/unit/: test_cache.py  test_chunker.py  test_domain_models.py  test_edges.py  test_guardrails.py  test_llm_client.py  test_parser.py  test_prompts.py  test_request_models.py  test_retrieval.py  test_retry.py  test_sparse.py  test_state.py
(+67 files in other folders)
