[project]
name = "quillflow"
version = "0.1.0"
description = "Production-grade Agentic RAG content generation system"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # ── Core Framework ──────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # ── LLM & RAG ──────────────────────────────
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",

    # ── Vector Store ───────────────
    "qdrant-client>=1.12.0",

    # ── Database ────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # ── Cache ───────────────────────────────────
    "redis[hiredis]>=5.2.0",

    # ── Document Parsing ────────────────────────
    "pypdf>=5.0.0",
    "beautifulsoup4>=4.12.0",

    # ── Observability ───────────────────────────
    "structlog>=24.0.0",
    "prometheus-client>=0.21.0",

    # ── Utilities ───────────────────────────────
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "numpy>=1.26.0",
    "rank-bm25>=0.2.2",

    # ── Task Queue ──────────────────────────────
    "arq>=0.26.0",

    # ── Auth ────────────────────────────────────
    "pydantic[email]>=2.10.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
